doc: sync READMEs and drop stale SQL dialect mapping
- Sync COFFEE-CHAT-README.md content with the current README.md
- Reset README-Templat.md back to a blank project template
- Remove the SqlDialectMappings entry for the deleted UserRepository.java

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>